# kai-edc2024-workshop

./: .gitignore  10_neural_nets_with_keras.ipynb  16_nlp_with_rnns_and_attention.ipynb  README.md  pyproject.toml  run-tests.py  workshop.ipynb
.devcontainer/: devcontainer.json
1_introduction/: notebook.ipynb  solution.ipynb
2_inductive_biases_and_symmetries/: notebook.ipynb  solution.ipynb
3_inductive_biases_and_symmetries/: solution.ipynb
3_language_models/: README.md  notebook.ipynb  solution.ipynb
4_language_models/: notebook.ipynb
kai/: __init__.py  _utils_notebook1.py  _utils_notebook2.py  _utils_notebook3.py
kai/data/: midsummer-night.txt  questions_answers.json  shakespeare.pickle
kai/tests/: test_utils.py
licenses/: MIT.txt
