[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edc2024-workshop"
version = "0.1.0"
authors = [
  {name = "Elizaveta (Leeza) Salo", email = "eabel@equinor.com" },
  {name = "David Augustin", email = "davaug@equinor.com" }
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "jupyterlab == 4.0.8",
    "numpy == 1.26.2",
    "pandas == 2.1.3",
    "tensorflow == 2.14.0",
    "keras-tuner == 1.4.6",
    "scikit-learn >= 1.5.2",
    "packaging >= 24.1",
    "matplotlib >= 3.9.2",
    "pathlib >= 1.0.1",
    "scipy >= 1.14.1",
    "matplotlib-label-lines >= 0.7.0",
    "plotly >= 5.24.1",
    "ipywidgets >= 8.1.5"
]