[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edc2024-workshop"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
  {name = "Liza Abel", email = "eabel@equinor.com"},
  {name = "David Augustin", email = "daugu@equinor.com"},
  {name = "Peter Koczka", email = "pkoc@equinor.com"},
  {name = "Robert Dibbel", email = "rdib@equinor.com"},
  {name = "Jennifer Sampson", email = "jensam@equinor.com"},
]
dependencies = [
    "jupyterlab>=4.0.8",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "tensorflow>=2.14.0",
    "keras-tuner>=1.4.6",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "pathlib>=1.0.1",
    "scipy>=1.14.1",
    "plotly>=5.24.1",
    "ipywidgets>=8.1.5",
    "torch>=2.3",
    "seaborn>=0.13",
    "torchvision>=0.20"

]
maintainers = [
  {name = "Liza Abel", email = "eabel@equinor.com"},
  {name = "David Augustin", email = "daugu@equinor.com"},
  {name = "Peter Koczka", email = "pkoc@equinor.com"},
  {name = "Robert Dibbel", email = "rdib@equinor.com"},
  {name = "Jennifer Sampson", email = "jensam@equinor.com"},
]
description = "Repository for EDC2024 workshop of the KAI team."
readme = "README.md"
